[project]
name = "sudoku-solver"
version = "0.1.0"
description = "A sudoku solver"
authors = [
    {name = "Bård Bysveen",email = "baardbysveen@proton.me"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
